<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearDialo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/rounded_bg"
    android:backgroundTint="#014F4F"
    android:gravity="center">


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="Add Your Contact"
        android:textColorHint="#C4FBFBFB"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:inputType="phone"
        android:fontFamily="@font/righteous"
        android:background="@drawable/edittext_bg" />



    <ImageView
        android:layout_margin="30dp"
        android:id="@+id/imageViewQR"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/rounded_bg"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp">
        <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnEnregistrer"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:src="@drawable/save"
        android:background="@drawable/btn_bg2"
        android:fontFamily="@font/righteous"
        android:textSize="25dp"
        android:text="Enregistrer"
        android:textColor="@color/white"
        android:textStyle="bold"
            android:visibility="gone"
        />
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnPartager"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:src="@drawable/share"
            android:background="@drawable/btn_bg2"
            android:fontFamily="@font/righteous"
            android:textSize="25dp"
            android:text="Partager"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone"
            />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGenerateQR"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_bg2"
        android:fontFamily="@font/righteous"
        android:textSize="25dp"
        android:text="To QR"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"/>


</LinearLayout>