...
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:id="@+id/link"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_background2"
            android:gravity="center"
...
